--- a/seite1.html
+++ b/seite1.html
@@ -35,7 +35,7 @@
             <div class="navbar-end">
             <div class="navbar-item">
                 <div class="buttons">
-                <a class="button is-primary">
+                <a class="button is-primary" href="seite3.html">
                     <strong>New Post</strong>
                 </a>
                 </div>
