--- a/seite3.html
+++ b/seite3.html
@@ -59,7 +59,7 @@
                 <div class="field">
                     <label class="label">Datum</label>
                     <div class="control">
-                      <input class="input" type="text" placeholder="Interessantes Thema">
+                      <input class="input" type="text" placeholder="01.01.2000">
                     </div>
                   </div>
                   
@@ -74,6 +74,13 @@
                     <label class="label">Beschreibung</label>
                     <div class="control">
                       <textarea class="textarea" placeholder="Ein interessanter Text."></textarea>
+                    </div>
+                  </div>
+
+                  <div class="field">
+                    <label class="label">Gelaufene Schritte</label>
+                    <div class="control">
+                        <input class="input is-link" type="text" placeholder="Schritte">
                     </div>
                   </div>
                   
